--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = heltec_wifi_kit_32
 framework = arduino
 build_flags = -Wno-unused-variable
 upload_port = COM10
+;upload_speed = 460800
 monitor_port = COM10
 monitor_speed = 115200
 lib_deps = 
